--- a/homepage-vue/index.html
+++ b/homepage-vue/index.html
@@ -23,7 +23,7 @@
 
         <div class="header row">
 
-          <div class="col-sm-8 col-lg-2 logo d-flex justify-content-start">
+          <div class="col-sm-6 col-lg-2 col-xxl-2 logo d-flex justify-content-start">
             <div class="d-flex">
               <div class="img-logo">
               </div>
@@ -34,7 +34,7 @@
             </div>
           </div>
 
-          <nav class="d-none d-lg-flex col-lg-8 navbar  justify-content-center">
+          <nav class="d-none d-lg-flex col-lg-7 col-xxl-8 navbar  justify-content-center">
             <ul class="nav">
               <li class="nav-item"><a href="" class="nav-link nav-link-1 text-white">Home</a></li>
               <li class="nav-item"><a href="" class="nav-link text-white">Sobre</a></li>
@@ -44,7 +44,7 @@
             </ul>
           </nav>
 
-          <div class="d-none d-sm-flex col-sm-4 col-lg-2 justify-content-end">
+          <div class="d-none d-sm-flex col-sm-6 col-lg-3 col-xxl-2 justify-content-end">
             <button type="button" class="btn bg-purple text-white align-self-center">Marca uma reunião</button>
           </div>
         </div>
