--- a/homepage-vue/index.html
+++ b/homepage-vue/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <link rel="icon" href="/favicon.ico">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Vite App</title>
+    <title>Pollo Tech</title>
 
     <!-- font awesome - kit icones-->
     <script src="https://kit.fontawesome.com/56e487acd9.js" crossorigin="anonymous"></script>
