--- a/homepage-vue/index.html
+++ b/homepage-vue/index.html
@@ -13,7 +13,9 @@
   </head>
   <body>
     
-    <div id="app" class="p-0"></div>
+    <div id="app" class="p-0">
+      meu nome 
+    </div>
 
     <script type="module" src="/src/main.js"></script>
   </body>
